# LI_automation_RUST

./: .gitignore  README.md
selenium/: Cargo.toml
selenium/src/: action.rs  lib.rs  main.rs
