[package]
name = "selenium"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "selenium"
path = "src/main.rs"

[dependencies]
fantoccini = "0.21"
tokio = { version = "1", features = ["full"] }
enigo = "0.1.0"
kuchiki = "0.8.1"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
